# Plume

./: App.tsx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  metadata.json  package.json  pyproject.toml  types.ts
components/: ContributionSpace.tsx  Dashboard.tsx  DeploymentView.tsx  Documentation.tsx  GeminiAssistant.tsx  Navigation.tsx  TemplateGallery.tsx
content/: github-pages.md
dist-package/: plume-0.1.0-py3-none-any.whl
pages/: _layout.py  index.py  post.py
plume/: __init__.py  __main__.py  build.py  cli_command.py  components.py  routing.py
plume/markdown/: __init__.py
