[project]
name = "plume"
version = "0.1.0"
description = "A modern Python static site generator that lets you build websites using Python components instead of template languages"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Abel", github = "a921-h" }]
requires-python = ">=3.10"
keywords = ["static-site-generator", "ssg", "python", "markdown", "html", "components", "blog", "website", "jinja2", "generator"]
url = { homepage = "https://github.com/a921-h/plume", repository = "https://github.com/a921-h/plume" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Static Site Generator",
    "Topic :: Software Development :: Static Site Generators",
]

dependencies = [
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
plume = "plume.cli_command:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["plume*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]